--- a/acronyms.tex
+++ b/acronyms.tex
@@ -32,6 +32,8 @@
 
 \newacronym[longplural=indicadores de desempeño]{kpi}{KPI}{indicador de desempeño}
 
+\newacronym[longplural=programaciónes lineales]{lp}{LP}{programación lineal}
+
 \newacronym[longplural=servicios de regulación secundaria]{mfrr}{mFRR}{servicio de regulación secundaria}
 
 \newacronym[longplural=mercados diarios]{md}{MD}{mercado diario}
@@ -39,6 +41,8 @@
 \newacronym[longplural=mercados intradiarios]{mi}{MI}{mercado intradiario}
 
 \newacronym[longplural=mercados intradiarios continuos]{mic}{MIC}{mercado intradiario continuo}
+
+\newacronym[longplural=programaciónes lineales de enteros mixtos]{milp}{MILP}{programación lineal de enteros mixtos}
 
 \newacronym[longplural=operadores del mercado]{mo}{MO}{operador del mercado}
 
