--- a/chapter7.tex
+++ b/chapter7.tex
@@ -71,6 +71,11 @@ Como se puede observar en la figura~\ref{fig:manual-vs-auto}, los dos principale
 \section{Configuración topológica}
 \label{makereference7.3}
 
+% TODO
+% [fcr-price.jpg](https://dexterenergy.ai/news/bess-trading-the-case-for-cross-market-optimization/)
+% Descenso promedio del precio de los mercados de ajuste por periodo.
+% ``Aunque los mercados de ajuste todavía ofrezcan picos ocasionales que vale la pena aprovechar, las configuraciones aisladas ya no son suficientes como estrategia independiente''
+
 Además, se han realizado análisis comparativos entre el rendimiento generado por cada una de las topologías, tanto aislada como híbrida, para determinar el aumento de beneficio que sistemas de optimización de baterías en el mercado eléctrico pueden aportar dependiendo de la configuración de la red.
 
 Se observan las diferencias de beneficio comparativos de la figura~\ref{fig:aislado-vs-híbrido} a favor de las topologías híbridas (en su configuración más permisiva), siendo capaces de enrutar los flujos de carga desde diferentes fuentes. De esta forma, es entendible la tendencia de la industria de aumentar el número de instalaciones de colocación híbridas renovables y de almacenamiento simultáneamente.
