--- a/references.bib
+++ b/references.bib
@@ -113,6 +113,32 @@
   note   = {Accessed: 2025-09-15}
 }
 
+@article{dong2021strategic,
+  title     = {A strategic day-ahead bidding strategy and operation for battery energy storage system by reinforcement learning},
+  author    = {Dong, Yi and Dong, Zhen and Zhao, Tianqiao and Ding, Zhengtao},
+  journal   = {Electric power systems research},
+  volume    = {196},
+  pages     = {107229},
+  year      = {2021},
+  publisher = {Elsevier}
+}
+
+@misc{enspired2025battery,
+  title  = {Battery Energy Storage Solutions for Maximum ROI},
+  author = {Enspired Trading},
+  url    = {https://www.enspired-trading.com/bess},
+  year   = 2025,
+  note   = {Accessed: 2025-09-15}
+}
+
+@misc{entelios2025cross,
+  title  = {Cross-Market Optimisation},
+  author = {Entelios},
+  url    = {https://www.entelios.de/cross-market-optimierung/},
+  year   = 2025,
+  note   = {Accessed: 2025-09-15}
+}
+
 @misc{gallo2023stand,
   title  = {Stand-alone battery energy storage system (BESS): plant design and economic assessment},
   author = {GALLO, MATTIA},
@@ -140,6 +166,15 @@
   publisher = {Elsevier}
 }
 
+@article{georgiadis2025hybrid,
+  title     = {A Hybrid ML-MILP Framework for the Optimal Integration of Photovoltaic and Battery Systems in Manufacturing Industries},
+  author    = {Georgiadis, Georgios P and Dimitriadis, Christos N and Passalis, Nikolaos and Georgiadis, Michael C},
+  journal   = {Computers \& Chemical Engineering},
+  pages     = {109356},
+  year      = {2025},
+  publisher = {Elsevier}
+}
+
 @article{gissey2018market,
   title     = {Market and regulatory barriers to electrical energy storage innovation},
   author    = {Gissey, Giorgio Castagneto and Dodds, Paul E and Radcliffe, Jonathan},
@@ -148,6 +183,12 @@
   pages     = {781--790},
   year      = {2018},
   publisher = {Elsevier}
+}
+
+@misc{haratian2024machine,
+  title  = {Machine Learning Algorithms for Energy Trading of Battery Energy Storage Systems: Reinforcement learning for trading energy on dual electricity markets},
+  author = {Haratian, Arash},
+  year   = {2024}
 }
 
 @article{he2015optimal,
@@ -209,6 +250,14 @@
   year   = {2016}
 }
 
+@misc{ikerlan2025bateria,
+  title  = {Optimización e Inteligencia Artificial para la operación de baterías de segunda vida en tiempo real},
+  author = {Ikerlan},
+  url    = {https://baic.eus/ikerlan-ia4bat-optimizacion-e-inteligencia-artificial-para-la-operacion-de-baterias-de-segunda-vida-en-tiempo-real/},
+  year   = 2025,
+  note   = {Accessed: 2025-09-15}
+}
+
 @misc{ingeteam2022ingeteam,
   title  = {Ingeteam suministra un sistema de baterías y su electrónica de potencia para la mayor planta de hidrógeno verde de Europa},
   author = {Ingeteam},
@@ -249,6 +298,17 @@
   school = {University of Vaasa}
 }
 
+@article{krishna2024advanced,
+  title     = {Advanced battery management system enhancement using IoT and ML for predicting remaining useful life in Li-ion batteries},
+  author    = {Krishna, Gopal and Singh, Rajesh and Gehlot, Anita and Almogren, Ahmad and Altameem, Ayman and Ur Rehman, Ateeq and Hussen, Seada},
+  journal   = {Scientific Reports},
+  volume    = {14},
+  number    = {1},
+  pages     = {30394},
+  year      = {2024},
+  publisher = {Nature Publishing Group UK London}
+}
+
 @article{kumar2019strategic,
   title     = {Strategic integration of battery energy storage systems with the provision of distributed ancillary services in active distribution systems},
   author    = {Kumar, Abhishek and Meena, Nand K and Singh, Arvind R and Deng, Yan and He, Xiangning and Bansal, RC and Kumar, Praveen},
@@ -265,6 +325,17 @@
   year   = {2018}
 }
 
+@article{liu2022milp,
+  title     = {A MILP-based battery degradation model for economic scheduling of power system},
+  author    = {Liu, Chunyang and Ma, Houzhen and Zhang, Hengxu and Shi, Xiaohan and Shi, Fang},
+  journal   = {IEEE Transactions on Sustainable Energy},
+  volume    = {14},
+  number    = {2},
+  pages     = {1000--1009},
+  year      = {2022},
+  publisher = {IEEE}
+}
+
 @article{louwen2018technological,
   title   = {Technological learning in energy modelling: experience curves},
   author  = {Louwen, Atse and Junginger, Martin and Krishnan, AL},
@@ -278,6 +349,26 @@
   publisher = {Crowstone Publishing},
   year      = {2021},
   isbn      = {1527287963}
+}
+
+@article{mendoza2023review,
+  title     = {A review in BESS optimization for power systems},
+  author    = {Mendoza Osorio, Diego},
+  journal   = {TecnoL{\'o}gicas},
+  volume    = {26},
+  number    = {56},
+  year      = {2023},
+  publisher = {Instituto Tecnol{\'o}gico Metropolitano-ITM}
+}
+
+@article{minh2024mixed,
+  title     = {A mixed-integer linear programming model for microgrid optimal scheduling considering BESS degradation and RES uncertainty},
+  author    = {Minh, Nguyen Quoc and Linh, Nguyen Duy and Khiem, Nguyen Trong},
+  journal   = {Journal of Energy Storage},
+  volume    = {104},
+  pages     = {114663},
+  year      = {2024},
+  publisher = {Elsevier}
 }
 
 @misc{mterd2024orden,
@@ -313,6 +404,17 @@
   organization = {Atlantis Press}
 }
 
+@article{rancilio2022revenue,
+  title     = {Revenue stacking for BESS: fast frequency regulation and balancing market participation in Italy},
+  author    = {Rancilio, Giuliano and Bovera, Filippo and Merlo, Marco},
+  journal   = {International Transactions on Electrical Energy Systems},
+  volume    = {2022},
+  number    = {1},
+  pages     = {1894003},
+  year      = {2022},
+  publisher = {Wiley Online Library}
+}
+
 @manual{ree2009protocolo,
   author = {Red Eléctrica de España},
   title  = {Protocolo de comunicaciones entre los sistemas de gestión del operador del sistema y equipos de control de consumidores interrumpibles y empresas distribuidoras (PCC-SCECI)},
@@ -340,6 +442,12 @@
   publisher = {MDPI}
 }
 
+@article{spiller2020aging,
+  title  = {Aging and MILP modelling for BESS},
+  author = {Spiller, Matteo},
+  year   = {2020}
+}
+
 @misc{sunkko2025two,
   title  = {Two Types of BMSS and Each Wiring Diagram},
   author = {Sunkko},
@@ -356,6 +464,14 @@
   number  = {3},
   pages   = {19},
   year    = {1999}
+}
+
+@misc{sympower2025battery,
+  title  = {Battery Solutions},
+  author = {Sympower},
+  url    = {https://sympower.net/battery-solutions},
+  year   = 2025,
+  note   = {Accessed: 2025-09-15}
 }
 
 @article{tejada2019review,
