--- a/principal.tex
+++ b/principal.tex
@@ -52,7 +52,7 @@
 
 \section*{Todo}
 \begin{enumerate}
-  \item Acrónimos MD MI MIC
+  \item Acrónimos MD MI MIC LP MILP
   \item Imágenes y tablas optional caption \texttt{\textbackslash caption[]\{\}} para que no salgan las citas en el indice de figuras y tablas
   \item Redactar capítulo estado de la cuestión (1 día)
   \item ¿Anexo de símbolos? (1 día)
