Fix glossaries (so random...)

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -7,7 +7,7 @@ Para que el sistema de optimización de baterías funcione de manera efectiva, n
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/esquema-mercado.jpg}
+  % \includegraphics[width=0.5\linewidth]{figures/esquema-mercado.jpg}
   \caption{Esquema del funcionamiento del entorno del mercado.}
   \label{fig:esquema-mercado}
 \end{figure}
@@ -27,7 +27,7 @@ El Operador del Mercado Ibérico de Energía, conocido como OMIE, es la instituc
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/omie.jpg}
+  % \includegraphics[width=0.5\linewidth]{figures/omie.jpg}
   \caption{Operador del Mercado Ibérico de Energía.}
   \label{fig:omie}
 \end{figure}
@@ -45,7 +45,7 @@ Una de las piezas de información más críticas para el sistema de optimizació
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/precio-casación.png}
+  % \includegraphics[width=0.5\linewidth]{figures/precio-casación.png}
   \caption{Precio marginal de casación en el mercado.}
   \label{fig:precio-casación}
 \end{figure}
@@ -90,7 +90,7 @@ Mientras que OMIE gestiona el componente económico del mercado, la responsabili
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/ree.jpg}
+  % \includegraphics[width=0.5\linewidth]{figures/ree.jpg}
   \caption{Red Eléctrica Española.}
   \label{fig:ree}
 \end{figure}
@@ -131,7 +131,7 @@ Este proceso de previsión es una tarea externa al sistema desarrollado. Se basa
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/prevision-renovable.png}
+  % \includegraphics[width=0.5\linewidth]{figures/prevision-renovable.png}
   \caption{Ejemplo de una previsión de generación de un activo renovable.}
   \label{fig:prevision-renovable}
 \end{figure}
@@ -163,7 +163,7 @@ Desde la perspectiva del sistema desarrollado, la fuente de datos meteorológico
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/arquitectura-mercado.png}
+  % \includegraphics[width=0.5\linewidth]{figures/arquitectura-mercado.png}
   \caption{Arquitectura desacoplada del proceso de extracción, transformación y carga.}
   \label{fig:arquitectura-mercado}
 \end{figure}
@@ -206,7 +206,7 @@ El formato de los datos de precios contiene las columnas fecha, hora y precio en
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/contenido-precio.png}
+  % \includegraphics[width=0.5\linewidth]{figures/contenido-precio.png}
   \caption{Ejemplificación del contenido de los ficheros de precio.}
   \label{fig:contenido-precio}
 \end{figure}
@@ -238,7 +238,7 @@ El fichero de energía negociada contiene las columnas UP, fecha, hora y energí
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/contenido-energia.png}
+  % \includegraphics[width=0.5\linewidth]{figures/contenido-energia.png}
   \caption{Ejemplificación del contenido de los ficheros de energía.}
   \label{fig:contenido-energia}
 \end{figure}
@@ -270,7 +270,7 @@ Para resolver este problema, se hace uso de una herramienta propietaria externa 
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/contenido-limitaciones.png}
+  % \includegraphics[width=0.5\linewidth]{figures/contenido-limitaciones.png}
   \caption{Limitaciones de programa a una instalación.}
   \label{fig:contenido-limitaciones}
 \end{figure}
