--- a/chapter3.tex
+++ b/chapter3.tex
@@ -10,7 +10,7 @@ Como es entendible, el desarrollo ha hecho uso de la infraestructura operacional
 \begin{figure}
   \centering
   \includesvg[width=0.5\linewidth]{figures/diagrama-bess.svg}
-  \caption{Diagrama de interno de un sistema de almacenamiento de energía en baterías~\cite{iberdrola2024bess}.}
+  \caption{Diagrama de un sistema de almacenamiento de energía en baterías~\cite{iberdrola2024bess}.}
   \label{fig:diagrama-bess}
 \end{figure}
 
@@ -140,7 +140,7 @@ La hibridación, incluso en sus formas más restrictivas, ofrece ventajas compar
 
 La instrumentación de campo constituye el conjunto de dispositivos físicos que actúan como la interfaz directa entre los flujos energéticos. Por un lado, se encargan de medir con precisión las variables físicas clave (como la potencia, tensión, \gls{soc}, etc.) y por otro, son los actuadores que ejecutan las órdenes generadas por la lógica de control y optimización.
 
-A partir dichos componentes, en forma del \gls{bms} como los de CATL~\cite{catl2023catl}, \gls{pcs}, transformadores de medida y el \gls{rtu} como los que como ofrece Ingeteam~\cite{ingeteam2025ingeteam}, el sistema extrae las siguientes señales.
+Concretamente, a partir dichos componentes, \gls{bms}, \gls{pcs}, transformador de medida y \gls{rtu}, ofrecidos por entidades como CATL~\cite{catl2023catl} e Ingeteam~\cite{ingeteam2025ingeteam}, el sistema extrae las siguientes señales.
 
 \begin{description}
 
