--- a/chapter2.tex
+++ b/chapter2.tex
@@ -48,7 +48,7 @@ En la actualidad, se subraya que la producción del mercado ibérico es ínfima 
 \begin{figure}
   \centering
   \includegraphics[width=0.4\linewidth]{figures/comparacion-energia-ciclada.png}
-  \caption{Comparación entre la media de la energía diaria real arbitrada durante mes de agosto entre el bombeo y las baterías de Optibat.}
+  \caption{Comparación entre la media de la energía diaria real arbitrada durante mes de agosto entre el bombeo y las baterías, negociadas públicamente por el sistema desarrollado.}
   \label{fig:comparacion-energia-ciclada}
 \end{figure}
 
